Tst/Tests/Pos/Seq/seq_type.p
main machine Entry {
    var l:seq[int];

    start state init { }
}
