Tst/Tests/Neg/Submachines/InvalidSubmachineBody.p
main machine Entry {
    submachine Foo {
        var a:int;
    }
}
